fix: note section is not left aligned and gap in wallets-deposit-crypto to 1.6rem for mobile screens (#11366)

--- a/packages/wallets/src/features/cashier/modules/DepositCrypto/components/DepositCryptoDisclaimers/DepositCryptoDisclaimers.scss
+++ b/packages/wallets/src/features/cashier/modules/DepositCrypto/components/DepositCryptoDisclaimers/DepositCryptoDisclaimers.scss
@@ -30,6 +30,5 @@
         line-height: 1.8rem;
         text-align: center;
         display: flex;
-        justify-content: center;
     }
 }
